<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/marvel_wp"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/title_main_activity"
        style="@style/text_title_main_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_main_activity"
        android:text="@string/text_view_main_activity"
        app:layout_constraintBottom_toTopOf="@id/desc_main_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/desc_main_activity"
        style="@style/text_description_main_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_desc_main_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_main_activity"
        style="@style/button_main_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_size_main_activity"
        android:text="@string/button_text_main_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc_main_activity" />

</androidx.constraintlayout.widget.ConstraintLayout>
